# actix_web_test

./: Cargo.toml  README.md
src/: app_config.rs  common.rs  lib.rs
src/auth/: mod.rs  tokens.rs
src/databases/: db.rs
src/handlers/: mod.rs  parts.rs  product.rs  products.rs  user.rs
src/models/: mod.rs  part.rs  product.rs  user.rs
src/repository/: mod.rs  part.rs  product.rs  user.rs
src/tests/: mod.rs  part_test.rs  product_test.rs  user_test.rs
