[package]
name = "actix_web_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
env_logger = "0.9"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.39"
tokio-postgres = "0.7.5"
tokio = "1.17.0"
