[package]
name = "actix_web_test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
actix-service = "2.0.2"
env_logger = "0.9"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.39"
tokio-postgres = "0.7.5"
tokio = "1.17.0"
config = "0.13.1"
deadpool-postgres = { version = "0.10.1", features = ["serde"] }
derive_more = "0.99.2"
dotenv = "0.15.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
sha2 = "0.10.2"
jsonwebtoken = "8.1.0"
chrono = "0.4.19"